--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,342 @@
-.App {
-  text-align: center;
+
+
+/* 
+  google font references
+
+  font-family: 'Abel', sans-serif;
+  font-family: 'Oswald', sans-serif;
+*/
+
+
+ /* main  */
+body{
+  margin: 0;
+  font-family: 'Abel', sans-serif;
+  font-size: 22px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* contact bar  */
+.contact-bar
+{
+  background-color: rgb(39, 37, 37);
+  color: gray;
+  text-align: right;
+  padding: 0.5em 2em;
+  font-size: 0.8em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.contact-bar span
+{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* header  */
+.App-header
+{
+  background-color: aliceblue;
+  background-image: url("./images/mbaback2.jpg");
+  background-repeat: no-repeat;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.h1-title
+{
+  padding: 1em;
+  font-family: 'Oswald', sans-serif; 
+  font-size: 1.5em;
+  text-align: right;
+  color:rgb(29, 29, 29)
+}
+.h1-title span
+{
+  margin-right: 0.2em;
+}
+.App-header h1
+{
+margin: 0;
+font-size: 3.5em;
+line-height: 1em;
+}
+
+
+.nav-bar
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-bar img
+{
+  width: 300px;
+  padding: 0.5em;
+}
+
+
+
+
+/*----------- NAVIGATION --------------*/
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li a {
+  display: block;
+  padding: 0.2em 1em;
+  text-decoration: none;
+  font-size: 1.5em;
+  text-align: center;
+  transition: 0.5s;
+  color: black;
+}
+
+nav ul li a:hover {
+  background-color: #7cccfa;
+  color: black;
+  font-weight: bold;
+}
+nav ul li.active a {
+  background-color: aqua;
+  color: #fff;
+  
+}
+
+/* Code for responsive hamburger menu ***************/
+.navigation li:first-child {
+display: block;
+}
+.navigation li {
+display: none;
+}
+.responsive li {
+display: block;
+}
+
+
+
+
+
+/* home page  */
+.section-out-now
+{
+  background-color: rgb(24, 107, 202);
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+.book-box
+{
+  position: relative;
+  text-align: center;
+  padding: 1em;
+  justify-self: flex-start;
+}
+
+.book-box button
+{
+  position: absolute;
+  top:25%;
+  left: 0;
+  margin-left: 50%;
+  margin-right: -50%;
+  background-color: rgba(255, 255, 255, 0.877);
+  font-size: 1.5em;
+  border: none;
+  border-radius: 10px;
+  padding: 0 4px 0 7px;
+  font-weight: bold;
+  box-shadow: 1px 1px 5px black;
+  color: rgb(75, 69, 67);
+  font-family: 'Oswald', sans-serif; 
+  letter-spacing: 0.1em;
+}
+
+.book-paragraph
+{
+  padding: 0.2em 0.5em 1em 2em;
+}
+.book-paragraph p:nth-child(1)
+{
+  font-size: 1.5em;
+}
+
+
+
+
+.section-about-book, .section-book-personas
+{
+  padding: 0.5em;
+  margin: 0.2em 0;
+}
+
+.section-about-book h3
+{
+  margin: 0.4em;
+  font-weight: lighter;
+  font-size: 2.1em;
+}
+
+.section-about-book p
+{
+  padding: 0 0.5em;
+  margin: 0.7em 0;
+}
+.section-about-book p:nth-child(2)
+{
+  font-weight: bold;
+  font-size: 1.05em;
+  color:rgb(39, 39, 39);
+
+}
+
+
+
+.section-book-personas
+{
+  margin-bottom: 2em;
+}
+
+.book-personas div
+{
+  background-color: rgb(233, 231, 231);
+  padding: 0.5em 1em;
+  border-radius: 8px;
+  margin: 0.5em;
+
+}
+.section-book-personas h3
+{
+  margin: 0.4em;
+  font-size: 1.3em;
+}
+
+
+.book-personas div h4
+{
+  font-family: 'Oswald', sans-serif; 
+  font-size: 2em;
+  font-weight: lighter;
+  margin: 0.3em 0 0;
+  color:rgb(13, 86, 170);
+}
+.book-personas div p
+{
+  margin: 0.2em 0 1em;
+}
+
+
+
+.section-book-reviews
+{
+  text-align: center;
+}
+
+.section-book-reviews h3
+{
+  margin: 1em;
+  font-size: 1.2em;
+}
+
+.book-reviews div
+{
+  background-color: rgb(24, 107, 202);
+  color: white;
+  padding: 1em 1em;
+  margin: 1em 0;
+  text-align: center;
+}
+
+.book-reviews div p
+{
+  margin: 0.2em 0 1em;
+  /* font-weight: bold; */
+  font-size: 1.1em;
+  letter-spacing: 0.05em;
+}
+
+.book-reviews div h4
+{
+  font-size: 0.9em;
+  font-weight: lighter;
+  margin: 0.3em 0 0;
+}
+
+
+
+
+/* video page */
+
+.App-video-page
+{
+
+}
+
+.video-book-about
+{
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding: 1em 1em 1em;
+}
+
+.video-book-about h2
+{
+  margin: 0;
+  font-size: 1.3em;
+  padding: 1em 2.5em 0.1em;
+}
+
+.video-book-about img
+{
+  width: 100%;
+  max-width: 560px;
+}
+
+
+
+
+.new-pms
+{
+  background-color: rgb(24, 107, 202);
+  color: white;
+  text-align: right;
+  padding: 1em;
+}
+
+
+.get-organized
+{
+  text-align: left;
+  background-color: aliceblue;
+  background-image: url("./images/mbaback2.jpg");
+  background-repeat: no-repeat;
+  padding: 2em;
+}
+.get-organized h2
+{
+  font-size: 3em;
+  font-family: 'Oswald', sans-serif; 
+}
+
+.get-organized a
+{
+  color: black;
+  background-color: gray;
+  text-decoration: none;
+  padding: 0.1em 0.5em;
+}
+
+.interview-prep
+{
+  background-color: rgb(95, 95, 95);
+  color: white;
+  text-align: center;
+  padding: 2em;
 }
